--- a/reactDemo/demo1/状态提升.html
+++ b/reactDemo/demo1/状态提升.html
@@ -80,16 +80,9 @@
 
         return (
           <div>
-            <TemperatureInput
-              scale="c"
-              temperature={celsius}
-              onTemperatureChange={this.handleCelsiusChange} />
-            <TemperatureInput
-              scale="f"
-              temperature={fahrenheit}
-              onTemperatureChange={this.handleFahrenheitChange} />
-            <BoilingVerdict
-              celsius={parseFloat(celsius)} />
+            <TemperatureInput scale="c" temperature={celsius} onTemperatureChange={this.handleCelsiusChange} />
+            <TemperatureInput scale="f" temperature={fahrenheit} onTemperatureChange={this.handleFahrenheitChange} />
+            <BoilingVerdict celsius={parseFloat(celsius)} />
           </div>
         );
       }
