--- a/baidumap/demo1/添加自定义覆盖物.html
+++ b/baidumap/demo1/添加自定义覆盖物.html
@@ -1,66 +1,29 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<style type="text/css">
-	    body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+		body, html {width: 100%;height: 100%;margin:0;font-family:"微软雅黑";}
+		#allmap{width:100%;height:500px;}
+		p{margin-left:5px; font-size:14px;}
 	</style>
-	<title>地图展示</title>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZOiRTF6bXHGxDT4FoK0EdyhZ2qxz2dAK"></script>
+	<title>添加自定义覆盖物</title>
 </head>
 <body>
 	<div id="allmap"></div>
+	<p>图示中为房产覆盖物，鼠标移到覆盖物上，自动显示房屋套数</p>
 </body>
 </html>
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZOiRTF6bXHGxDT4FoK0EdyhZ2qxz2dAK"></script>
 <script type="text/javascript">
-	var data = [
-		{
-			position: [114.060685,22.53127], //福田区
-			title: '福田区'
-		},{
-			position: [114.140023,22.555837], //罗湖区
-			title: '罗湖区'
-		},{
-			position: [114.244083,22.565984], //盐田区
-			title: '盐田区'
-		},{
-			position: [113.936503,22.539816], //南山区
-			title: '南山区'
-		},{
-			position: [113.891085,22.563314], //宝安区
-			title: '宝安区'
-		},{
-			position: [114.046312,22.759148], //龙华区
-			title: '龙华区'
-		}
-	]
-	
-	init();
-
-    function init () {
-    	// 百度地图API功能
-		var initPoint = data[0].position;	//初始化地图坐标
-
-    	var map = new BMap.Map("allmap");    // 创建Map实例
-
-		var point = new BMap.Point(initPoint[0], initPoint[1]); //根据经纬度创建地理坐标
-
-    		map.centerAndZoom(point, 12);  // 初始化地图,设置中心点坐标和地图级别
-
-		for (var i=0;i<data.length;i++) {
-			var _nowP = data[i].position;
-			var _point = new BMap.Point(_nowP[0], _nowP[1]);
-
-			var myIcon = new BMap.Icon('http://jianzaogong.com/favicon.ico', new BMap.Size(64, 64)); //创建自定义图标
-
-			addMarker(map, _point, myIcon, data[i].title);	//添加marker
-		}
-    	//map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
-    }
-
-
-	function ComplexCustomOverlay(point, text, mouseoverText){
+	// 百度地图API功能
+	var mp = new BMap.Map("allmap");
+	mp.centerAndZoom(new BMap.Point(116.3964,39.9093), 15);
+	mp.enableScrollWheelZoom();
+	// 复杂的自定义覆盖物
+    function ComplexCustomOverlay(point, text, mouseoverText){
       this._point = point;
       this._text = text;
       this._overText = mouseoverText;
@@ -119,27 +82,11 @@
       this._div.style.left = pixel.x - parseInt(this._arrow.style.left) + "px";
       this._div.style.top  = pixel.y - 30 + "px";
     }
+    
+    var txt = "银湖海岸城", mouseoverTxt = txt + " " + parseInt(Math.random() * 1000,10) + "套" ;
 
+    var myCompOverlay = new ComplexCustomOverlay(new BMap.Point(116.407845,39.914101), "银湖海岸城",mouseoverTxt);
 
+    mp.addOverlay(myCompOverlay);
 
-	function addMarker (map, point, icon, title) {
-		/* var marker = new BMap.Marker(point, {icon: icon});	//创建标注
-			marker.addEventListener('click', function (data) {
-				var p = marker.getPosition();	//获取当前marker的位置
-				map.setZoom(15);
-				map.panTo(point);
-				console.log({
-					lng: p.lng,
-					lat: p.lat,
-					title: title
-				});
-			});
-			map.addOverlay(marker); */
-
-			var txt = title, mouseoverTxt = title;
-
-		    var myCompOverlay = new ComplexCustomOverlay(point, title,mouseoverTxt);
-
-		    map.addOverlay(myCompOverlay);
-	}
 </script>
