--- a/baidumap/demo1/jianzaogong.html
+++ b/baidumap/demo1/jianzaogong.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<style type="text/css">
 	    body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+		.markerOver:hover {
+			background: gold !important;
+		}
 	</style>
 	<title>地图展示</title>
 </head>
@@ -14,35 +17,163 @@
 </html>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZOiRTF6bXHGxDT4FoK0EdyhZ2qxz2dAK"></script>
 <script type="text/javascript">
+
+	function ComplexCustomOverlay(point, text, mouseoverText, data){
+      this._point = point;
+      this._text = text;
+      this._overText = mouseoverText;
+	  this._data = data;
+    }
+    ComplexCustomOverlay.prototype = new BMap.Overlay();
+    ComplexCustomOverlay.prototype.initialize = function(map){
+      this._map = map;
+      var div = this._div = document.createElement("div");
+	  div.className = 'markerOver';
+      div.style.position = "absolute";
+      div.style.zIndex = BMap.Overlay.getZIndex(this._point.lat);
+      div.style.backgroundColor = "#EE5D5B";
+      div.style.border = "1px solid #BC3B3A";
+      div.style.color = "white";
+	  div.style.height = "94px";
+      div.style.width = "94px";
+      div.style.lineHeight = "40px";
+      div.style.whiteSpace = "nowrap";
+      div.style.MozUserSelect = "none";
+	  div.style.fontSize = "12px";
+	  div.style.textAlign = "center";
+	  div.style.borderRadius = "50%";
+      div.style.borderColor = "transparent";
+	  var _inner = '<p style="font-size: 15px;">'+ this._text +'</p><p style="margin-top:-30px;">12个项目</p>';
+      div.innerHTML = _inner;
+
+	  var _this = this;
+
+	  div.addEventListener('click', function () {
+		    map.setZoom(15);
+		    map.panTo(_this._point);
+	  		map.clearOverlays();
+			console.log(_this._point);
+	  });
+
+      map.getPanes().labelPane.appendChild(div);
+      return div;
+    }
+    ComplexCustomOverlay.prototype.draw = function(){
+      var map = this._map;
+      var pixel = map.pointToOverlayPixel(this._point);
+      this._div.style.left = pixel.x - 30 + "px";
+      this._div.style.top  = pixel.y - 30 + "px";
+    }
+
 	var data = [
 		{
 			position: [114.060685,22.53127], //福田区
-			title: '福田区'
+			title: '福田区',
+			children: [
+				{
+					title: '金帝翠园',
+					position: [114.060357,22.530006]
+				},
+				{
+					title: '丽阳天下名苑',
+					position: [114.057392,22.530978]
+				},
+				{
+					title: '皇悦酒店',
+					position: [114.056481,22.52827]
+				},
+				{
+					title: '新新家园',
+					position: [114.056481,22.52827]
+				},
+				{
+					title: '益田名苑',
+					position: [114.056481,22.52827]
+				}
+			]
 		},{
 			position: [114.140023,22.555837], //罗湖区
-			title: '罗湖区'
+			title: '罗湖区',
+			children: [
+				{
+					title: '名都大厦',
+					position: [114.136426,22.55582]
+				},
+				{
+					title: '海丽大厦',
+					position: [114.138142,22.556145]
+				}
+			]
 		},{
 			position: [114.244083,22.565984], //盐田区
-			title: '盐田区'
+			title: '盐田区',
+			children: [
+				{
+					title: '翠景花园',
+					position: [114.244018,22.565324]
+				},
+				{
+					title: '海荣居',
+					position: [114.244804,22.565853]
+				},
+				{
+					title: '暗径新村',
+					position: [114.242833,22.564398]
+				}
+			]
 		},{
 			position: [113.936503,22.539816], //南山区
-			title: '南山区'
+			title: '南山区',
+			children: [
+				{
+					title: '南山区政府',
+					position: [113.937186,22.538784]
+				},
+				{
+					title: '南苑学院',
+					position: [113.939714,22.539526]
+				}
+			]
 		},{
 			position: [113.891085,22.563314], //宝安区
-			title: '宝安区'
+			title: '宝安区',
+			children: [
+				{
+					title: '宝安区政府',
+					position: [113.89022,22.561794]
+				},
+				{
+					title: '保安体育场',
+					position: [113.887364,22.563888]
+				}
+			]
 		},{
 			position: [114.046312,22.759148], //龙华区
-			title: '龙华区'
+			title: '龙华区',
+			children: [
+				{
+					title: '万象点',
+					position: [114.04455,22.764258]
+				},
+				{
+					title: '万象百货',
+					position: [114.045776,22.762692]
+				},
+				{
+					title: '拉拉',
+					position: [114.049558,22.774372]
+				}
+			]
 		}
 	]
-	
-	init();
 
-    function init () {
+
     	// 百度地图API功能
 		var initPoint = data[0].position;	//初始化地图坐标
 
     	var map = new BMap.Map("allmap");    // 创建Map实例
+
+		window.map = map;
 
 		var point = new BMap.Point(initPoint[0], initPoint[1]); //根据经纬度创建地理坐标
 
@@ -56,69 +187,7 @@
 
 			addMarker(map, _point, myIcon, data[i].title);	//添加marker
 		}
-    	//map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
-    }
-
-
-	function ComplexCustomOverlay(point, text, mouseoverText){
-      this._point = point;
-      this._text = text;
-      this._overText = mouseoverText;
-    }
-    ComplexCustomOverlay.prototype = new BMap.Overlay();
-    ComplexCustomOverlay.prototype.initialize = function(map){
-      this._map = map;
-      var div = this._div = document.createElement("div");
-      div.style.position = "absolute";
-      div.style.zIndex = BMap.Overlay.getZIndex(this._point.lat);
-      div.style.backgroundColor = "#EE5D5B";
-      div.style.border = "1px solid #BC3B3A";
-      div.style.color = "white";
-      div.style.height = "18px";
-      div.style.padding = "2px";
-      div.style.lineHeight = "18px";
-      div.style.whiteSpace = "nowrap";
-      div.style.MozUserSelect = "none";
-      div.style.fontSize = "12px"
-      var span = this._span = document.createElement("span");
-      div.appendChild(span);
-      span.appendChild(document.createTextNode(this._text));
-      var that = this;
-
-      var arrow = this._arrow = document.createElement("div");
-      arrow.style.background = "url(http://map.baidu.com/fwmap/upload/r/map/fwmap/static/house/images/label.png) no-repeat";
-      arrow.style.position = "absolute";
-      arrow.style.width = "11px";
-      arrow.style.height = "10px";
-      arrow.style.top = "22px";
-      arrow.style.left = "10px";
-      arrow.style.overflow = "hidden";
-      div.appendChild(arrow);
-
-      div.onmouseover = function(){
-        this.style.backgroundColor = "#6BADCA";
-        this.style.borderColor = "#0000ff";
-        this.getElementsByTagName("span")[0].innerHTML = that._overText;
-        arrow.style.backgroundPosition = "0px -20px";
-      }
-
-      div.onmouseout = function(){
-        this.style.backgroundColor = "#EE5D5B";
-        this.style.borderColor = "#BC3B3A";
-        this.getElementsByTagName("span")[0].innerHTML = that._text;
-        arrow.style.backgroundPosition = "0px 0px";
-      }
-
-      map.getPanes().labelPane.appendChild(div);
-
-      return div;
-    }
-    ComplexCustomOverlay.prototype.draw = function(){
-      var map = this._map;
-      var pixel = map.pointToOverlayPixel(this._point);
-      this._div.style.left = pixel.x - parseInt(this._arrow.style.left) + "px";
-      this._div.style.top  = pixel.y - 30 + "px";
-    }
+    	map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
 
 
 
@@ -136,10 +205,15 @@
 			});
 			map.addOverlay(marker); */
 
-			var txt = title, mouseoverTxt = title;
+			var txt = title, mouseoverTxt = title + 'over';
 
-		    var myCompOverlay = new ComplexCustomOverlay(point, title,mouseoverTxt);
+		    var myCompOverlay = new ComplexCustomOverlay(point, title, mouseoverTxt, {
+				lng: point.lng,
+				lat: point.lat
+			});
 
 		    map.addOverlay(myCompOverlay);
 	}
+
+
 </script>
